[package]
name = "raybar"
version = "0.1.0"
authors = ["Peter de Croos <cultofmetatron@aumlogic.com>"]
edition = "2018"

[dependencies]
image = "0.22.2"
num-traits = "0.2.8"
clap = "2.33.0"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
